# cecar_technology

./: .gitignore  .gitmodules  CeCar_Status_Overview.xlsx  README.md
rcu/: .cproject  .mxproject  .project  LICENSE  Makefile  cecar_rcu_ros2.ioc
rcu/Core/Inc/: main.h  main_cpp.h  shared.hpp  stm32f4xx_it.h
rcu/Core/Src/: main.c  main_cpp.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/node-configuration_example/lib/$[PROJECT_NAME}/: listener  talker
ros2_ws/install/node-configuration_example/lib/node-configuration_example/: listener  talker
ros2_ws/install/node-configuration_example/share/ament_index/resource_index/package_run_dependencies/: node-configuration_example
ros2_ws/install/node-configuration_example/share/ament_index/resource_index/parent_prefix_path/: node-configuration_example
ros2_ws/install/node-configuration_example/share/node-configuration_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/node-configuration_example/share/node-configuration_example/cmake/: node-configuration_exampleConfig-version.cmake  node-configuration_exampleConfig.cmake
ros2_ws/install/node-configuration_example/share/node-configuration_example/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/node-configuration_example/share/node-configuration_example/launch/: demo.launch.py  demo_launch.py
ros2_ws/log/: latest_build
ros2_ws/src/cecar/: CMakeLists.txt  package.xml
ros2_ws/src/cecar/include/: linux_semaphore.hpp  shared.hpp
ros2_ws/src/cecar/launch/: cecar.py  rc.py  safe_driving_mode.yaml
ros2_ws/src/cecar/src/: gamepad_rc.cpp  intelligence_collection.cpp  keyboard_rc.cpp  rcu_comm.cpp  self_control.cpp  uart.cpp
ros2_ws/src/cecar_base/: CMakeLists.txt  package.xml
ros2_ws/src/cecar_base/include/: shared.hpp
ros2_ws/src/cecar_base/launch/: cecar.launch.py  parameters.yaml  rc.launch.py
ros2_ws/src/cecar_base/src/: drive.cpp  introspection.cpp  self_protection.cpp
ros2_ws/src/cecar_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/cecar_msgs/cecar_status/: CMakeLists.txt  package.xml
ros2_ws/src/cecar_msgs/cecar_status/msg/: CecarStatus.msg
ros2_ws/src/cecar_msgs/wheelenc_msgs/: package.xml
ros2_ws/src/node-configuration_example/: README.md  package.xml
src/cecar_base/include/: shared.hpp  uart.hpp
src/cecar_base/launch/: cecar.launch.py  cecar_parameters.yaml  gamepad_parameters.yaml  rc.launch.py
src/cecar_base/src/: gamepad_rc.cpp  rcu_comm.cpp  self_protection.cpp
src/cecar_msgs/: CMakeLists.txt
src/cecar_msgs/wheelenc_msgs/: CMakeLists.txt
src/cecar_msgs/wheelenc_msgs/msg/: WheelEnc.msg
src/node-configuration_example/: CMakeLists.txt  README.md
src/node-configuration_example/launch/: demo.launch.py
