<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cecar</name>
  <version>0.0.0</version>
  <description>CeCar ROS2 firmware</description>
  <maintainer email="lukas.mirow@student.htw-berlin.de">Lukas Mirow</maintainer>
  <license>Unlicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cecar_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>cecar_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!--For the executable:-->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
