<package>
  <name>cecar_status</name>
  <version>1.0.0</version>
  <description>Message containing introspection information for CeCar ROS 2 software</description>
  <maintainer email="s0558009@htw-berlin.de">Lukas Mirow</maintainer>
  <author>Lukas Mirow</author>
  <license>Unlicense</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
